Fix "blank screen" on small displays

--- a/src/app/resume/resume/resume.component.scss
+++ b/src/app/resume/resume/resume.component.scss
@@ -43,6 +43,11 @@
             box-shadow: $box-shadow-lg !important;
             @include hoverdarken($box-shadow-lg);
         }
+
+        .-vh-md-100 {
+            height: 100vh !important;
+        }
+
     }
 }
 
